修改了战斗记录的接口，增加了生成题目状态判断的幂等性